--- a/index.html
+++ b/index.html
@@ -352,6 +352,12 @@
 <header>
     <h2> Aberto de Sexta a Domingo das 18:00 as 00:00</p>
     <p> Número de contato (+55) 98796-2922</h2>
+    <a href="https://www.instagram.com/dieckdanielshamburguerias?igsh=OHZiZmF3NnAzeWQ4" target="_blank">
+  <img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram" width="40">
+</a>
+
+<a href="https://www.instagram.com/dieckdanielshamburguerias?igsh=OHZiZmF3NnAzeWQ4" target="_blank" 
+
      
     
   </header> 
