--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Dieck Daniels </title>
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="mem.JPEG" type="image/x-icon">
-
+<link rel="shortcut icon" href="mem.JPEG" type="image/x-icon">
 </head>
 
 
