--- a/index.html
+++ b/index.html
@@ -205,7 +205,8 @@
 
   <div class="item">
     <h2>Itubaína 350ML</h2>
-    <img src="itub.jpg" alt="Itubaína" style="width: 1000px; border-radius: 15px;">
+    <img src="itub.jpg" alt="Itubaína" style="width: 1000px; border-radius: 15px;"
+    >
     <p class="preco">R$6,00</p>
   </div>
 
@@ -275,9 +276,7 @@
       
 
 
-      <a href="https://www.instagram.com/dieck_daniels?igsh=b2tzbzk4N3dqZXIx" target="_blank">
-  <img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram" width="40">
-</a>
+      
 
 </div>
 
